<resources>


    <string name="app_name">TravelJournal2.0</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="splash_screen_text">Splash Screen Text Here</string>
    <string name="username_missing">Username missing</string>
    <string name="password_missing">Password missing</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First Name</string>
    <string name="first_name_missing">First name missing</string>
    <string name="last_name_missing">Last name missing</string>
    <string name="bundle_not_received">Bundle not received</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="share">Share</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up_success">User created successfully,</string>
    <string name="sign_up_fail">User could not be created</string>
    <string name="password_to_short">Password to short</string>
    <string name="log_in_success">Log in successful</string>
    <string name="error">ERROR</string>
    <string name="log_in_error">Log in Error</string>
    <string name="log_out">Log Out</string>
    <string name="email_missing">Email address missing</string>
    <string name="user_added_to_database">User added to database</string>
    <string name="users">users</string>
    <string name="firstName">firstName</string>
    <string name="lastName">lastName</string>
    <string name="email">email</string>
    <string name="price">Price</string>
    <string name="trip_name">trip_name</string>
    <string name="destination">Destination</string>
    <string name="name_of_trip">Name of trip</string>
    <string name="trip_name_missing">Trip name missing</string>
    <string name="destination_missing">Destination missing</string>
    <string name="description_missing">Description missing</string>
    <string name="price_missing">Price missing</string>
    <string name="favourite">favourite</string>
    <string name="upload_in_progress">Upload in progress</string>
    <string name="city_break">City Break</string>
    <string name="sea_side">Sea Side</string>
    <string name="mountains">Mountains</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="trips">trips</string>
    <string name="city">city</string>
    <string name="mountain">mountain</string>
    <string name="see">see</string>
    <string name="startDate">startDate</string>
    <string name="endDate">endDate</string>
    <string name="sea">sea</string>
    <string name="update_failed">Update failed</string>
    <string name="card_view_background">#f5f5f0</string>
    <string name="contact_me">Contact Me</string>
    <string name="about_me">About Me</string>
    <string name="my_email">egri.szabolcs9898@gmail.com</string>
    <string name="email_pass">szaszabics98</string>

</resources>
