<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditTripActivity">

    <EditText
        android:id="@+id/editTripNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/name_of_trip"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editDestinationEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/destination"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editPriceEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editDescriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="Description"
        android:inputType="textMultiLine"
        android:textSize="20sp" />


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">
        <RadioButton
            android:id="@+id/cityBreakRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_break">
        </RadioButton>
        <RadioButton
            android:id="@+id/seeSideRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sea_side">
        </RadioButton>
        <RadioButton
            android:id="@+id/mountainRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mountains">
        </RadioButton>
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/editStartDateTextView"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/start_date"
            android:layout_margin="4dp">
        </TextView>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/ic_menu_add"
            android:onClick="setStartDateOnClick"></ImageButton>
    </LinearLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">
       <TextView
           android:id="@+id/editEndDateTextView"
           android:layout_width="120dp"
           android:layout_height="wrap_content"
           android:text="@string/end_date"
           android:textSize="20sp"
           android:layout_margin="4dp">
       </TextView>
       <ImageButton
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:onClick="setEndDateOnClick"
           android:background="@android:drawable/ic_menu_add"></ImageButton>
   </LinearLayout>


    <ProgressBar
        android:id="@+id/editTripProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"></ProgressBar>

    <Button
        android:id="@+id/editTripButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="editTripOnClick"
        android:text="Edit Trip" />
</LinearLayout>