<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:paddingTop="20dp"
    android:weightSum="5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">



        <EditText
            android:id="@+id/firstNameEditText"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:layout_margin="4dp"/>

        <EditText
            android:id="@+id/lastNameEditText"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:layout_margin="4dp"/>
        <EditText
            android:id="@+id/signUpEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:layout_margin="4dp"
            />


        <EditText
            android:id="@+id/signUpPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_margin="4dp"/>

       

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="4"
        android:gravity="bottom"
        android:padding="15dp">
        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="signUpOnClick"
            android:text="@string/sign_up"
            android:textSize="25sp"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>






</LinearLayout>